--- a/blogs.html
+++ b/blogs.html
@@ -6,7 +6,7 @@
 
     <link href="https://apply.holbertonschool.com/level2/school.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
-    <title>About Me</title>
+    <title>My Blogs</title>
 </head>
 <body>
     <div id="fb-root"></div>
@@ -23,27 +23,17 @@
     </header>
     <main>
         <article>
-            <h1>About Me</h1>
-            <p>
-                Hello, I'm Tuncay, and this is my personal website. 
-                I have a passion for Mobile App Development with Flutter framework.
-                I also enjoy low-level programming.
-                I am currently studying at ASOIU.
-            </p>
-            <h2>My Interests</h2>
-            <ul>
-                <li>Low-Level Programming</li>
-                <li>Backend Development with Python</li>
-                <li>Mobile App Development</li>
+            <h1>My Blogs</h1>
+            <ul id="blog-list">
             </ul>
-            <img id="smart_thumbnail" class="small" src="https://www.seiu1000.org/sites/main/files/main-images/camera_lense_0.jpeg" alt="Large Image">
-            <h3>Contact Me</h3>
-
-            <p>
-                If you'd like to get in touch with me, feel free to send me an email at 
-                <a href="mailto:isgenderlituncay2004@gmail.com">isgenderlituncay2004@gmail.com</a>.
-            </p>
-            <img src="https://apply.holbertonschool.com/holberton-logo.png" alt="My Profile Picture">
+            <div class="blog-card">
+                <h2><a href="blog1.html">Installing Mango Automation on CentO</a></h2>
+            </div>
+            
+            <div class="blog-card">
+                <h2><a href="blog2.html">Connecting to PostgreSQL with Rust and Diesel</a></h2>
+            </div>
+            
         </article>
         <aside>
             <div id="disqus_thread"></div>
